add contact form for test

--- a/cv.html
+++ b/cv.html
@@ -76,7 +76,12 @@
       </div>
       <p><span id="age"></span> ans, permisB, véhiculé</p>
 
-      <hr>
+      <hr class="bg-primary">
+
+      <!-- CTA -->
+      <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
+
+      <hr class="bg-primary">
 
       <!-- Corps du CV -->
       <div class="row">
@@ -214,9 +219,8 @@
         <h4>Liens internes</h4>
         <a href="contact.html">Contactez-moi</a>
         <a href="mentions.html">Mentions Légales</a>
-        <a href="rgpd.html">RGPD</a>
       </section>
-      <p class="col-12">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+      <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
     </footer>
 
 
