--- a/mentions.html
+++ b/mentions.html
@@ -285,9 +285,8 @@
         <h4>Liens internes</h4>
         <a href="contact.html">Contactez-moi</a>
         <a href="mentions.html">Mentions Légales</a>
-        <a href="rgpd.html">RGPD</a>
       </section>
-      <p class="col-12">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+      <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
     </footer>
 
     <script
