add presentation page test contact ok

--- a/cv.html
+++ b/cv.html
@@ -71,15 +71,10 @@
     <main class="container text-center ">
       <!-- titre du CV -->
       <div class="row align-items-center justify-content-center titreCv py-5 py-md-4">
-        <h2 class="col-12 col-sm-6 col-md-8">Développeur Web Junior</h2>
+        <h2 class="col-12 col-sm-6 col-md-8 text-primary">Développeur Web Junior</h2>
         <img class="photoProfil col-12 col-sm-6 col-md-4" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup">
       </div>
       <p><span id="age"></span> ans, permisB, véhiculé</p>
-
-      <hr class="bg-primary">
-
-      <!-- CTA -->
-      <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
 
       <hr class="bg-primary">
 
@@ -197,6 +192,13 @@
           <li>Musique : composition musicale, pratique du cor et de la trompette</li>
           <li>Autres : lecture, peinture/dessin, menuiserie/lutherie, jeux-vidéo</li>
         </ul>
+      </article>
+
+      <!-- CTA -->
+      <article class="text-center alert alert-info">
+        <p>Mon CV vous parait interrressant? Vous souhaitez en savoir plus?</p>
+        <p>N'hésitez plus</p>
+        <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
       </article>
 
     </main>
