--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="card-footer border border-light rounded bg-primary bg-opacity-25 ">
-              <a href="/pilou_art" class="btn btn-primary">Visitez le site</a>
+              <a href="/pilou_art" class="btn btn-info">Visitez le site</a>
               <a href="/projets.html#" class="btn btn-light">Descriptif</a>
             </div>
         </section>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="card-footer border border-light rounded bg-primary bg-opacity-25 ">
-              <a href="https://maitressege.fr" class="btn btn-primary">Visitez le site</a>
+              <a href="https://maitressege.fr" class="btn btn-info">Visitez le site</a>
               <a href="/projets.html#" class="btn btn-light">Descriptif</a>
             </div>
         </section>
@@ -142,11 +142,20 @@
               </div>
           </div>
           <div class="card-footer border border-light rounded bg-primary bg-opacity-25">
-            <a href="/index.html" class="btn btn-primary">Visitez le site</a>
+            <a href="/index.html" class="btn btn-info">Visitez le site</a>
             <a href="/projets.html#" class="btn btn-light">Descriptif</a>
           </div>
         </section>
-      </article>    
+      </article>
+
+      <hr class="mx-5 bg-primary">
+      
+      <!-- CTA -->
+      <article class="text-center alert alert-info">
+        <p>Mes projets vous plaisent? Mon profil vous intéresse?</p>
+        <p>N'hésitez plus</p>
+        <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
+      </article>
 
 
     </main>
