add beginning of project page

--- a/mentions.html
+++ b/mentions.html
@@ -275,7 +275,7 @@
 
       <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Projets à voir</h4>
-        <a href="/pilou_art/index.html">Gallerie de Pilou_art</a>
+        <a href="/pilou_art/index.html">Galerie de Pilou_art</a>
         <a href="https://maitressege.fr">Blog deMaitresse Gé</a>
       </section>
 
