--- a/presentation.html
+++ b/presentation.html
@@ -73,7 +73,7 @@
       <article class="text-center alert alert-secondary">
         <h2>Qui suis-je?</h2>
         <p>Je suis un <a href="#devweb">Développeur Web Junior</a> de <span id="age"></span> ans, pacsé, père de 2 enfants, originaire de et installé dans la région lyonnaise.</p>
-        <p>Ayant un passé de <a href="#musmili">musicien-militaire</a>, je peux vous faire profiter d'expériences incomparables, et d'un savoir-être très aprécié par mes collègues</p>
+        <p>Ayant un passé de <a href="#musmili">musicien-militaire</a>, je peux vous faire profiter d'expériences incomparables, et d'un savoir-être très apprécié par mes collègues</p>
         <p>Parmi mes traits de caractère, les plus présents sont ces <a href="#3c">"3C"</a> qui me tiennent particulièrement à coeur: être créatif, toujours rester constructif, et ne jamais arreter d'être curieux.</p>
       </article>
 
@@ -173,7 +173,7 @@
 
       <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Projets à voir</h4>
-        <a href="/pilou_art/index.html">Gallerie de Pilou_art</a>
+        <a href="/pilou_art/index.html">Galerie de Pilou_art</a>
         <a href="https://maitressege.fr">Blog deMaitresse Gé</a>
       </section>
 
