--- a/projets.html
+++ b/projets.html
@@ -70,7 +70,31 @@
 
     <!-- Main -->
     <main class="container">
-      <p>en construction</p>
+      <!-- mini-nav -->
+      <article class="d-flex">
+        <a href="#portfolio" class="btn btn-outline-primary">mon portfolio</a><a href="#portfolio" class="btn btn-outline-primary">mon portfolio</a>
+      </article>
+
+      <!-- Portfolio -->
+      <article class="row border border-2 border-primary rounded p-3" id="portfolio">
+        <section class="titreProj col-12 text-center">
+          <h2>Mon Portfolio</h2>
+        </section>
+        <section class="imgProj col-12 col-md-6">
+          <img class="img-fluid" src="/assets/portfolio.jpg" alt="ecran CV portfolio">
+        </section>
+        <section class="txtProj col-12 col-md-6 row">
+          <h3>Projet Bootstrap et Js</h3>
+          <p>Mon portfolio est l'occasion pour moi de mettre en pratique mes cours sur bootstrap et de réaliser une animation en Javascript</p>
+          <p>Il est construit à l'aide de bootstrap5 et du thème <a href="https://bootswatch.com/spacelab/">Spacelab</a> de Bootswatch et un peu de custon Css</p>
+          <p>Le fond de page est une animation Js a l'aide de la librtairie <a href="https://particles.js.org/">tsParticles</a>.</p>
+          <p>C'est actuellement le site sur lequel vous naviguez</p>
+          <a href="https://perezpl.fr" class="btn btn-info">Visitez le site</a>
+        </section>
+      </article>
+
+      
+      
     </main>
 
     <footer class="container-fluid row text-center justify-content-center mt-5 pt-3">
@@ -83,7 +107,7 @@
 
       <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Projets à voir</h4>
-        <a href="/pilou_art/index.html">Gallerie de Pilou_art</a>
+        <a href="/pilou_art/index.html">Galerie de Pilou_art</a>
         <a href="https://maitressege.fr">Blog deMaitresse Gé</a>
       </section>
 
