--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <article class="row my-3 justify-content-around">
 
         <section class="card bg-primary bg-opacity-10 border-primary col-12 col-sm-6 col-md-4">
-            <img class="card-img-top mt-2 border border-light" src="/assets/pilou_art.jpg" alt="ecran d'accueil pilou_art">
+            <img class="card-img-top mt-2 border border-light" src="/assets/pilou_artreduit.jpg" alt="ecran d'accueil pilou_art">
             <div class="card-header bg-primary bg-opacity-25 border border-light">Galerie d'image</div>
             <div class="card-body">
                 <h4 class="card-title">Galerie d'art de Pilou - Art by Pilou</h4>
@@ -116,7 +116,7 @@
         </section>
 
         <section class="card bg-primary bg-opacity-10 border-primary col-12 col-sm-6 col-md-4">
-            <img class="card-img-top mt-2 border border-light"  src="/assets/maitressege.jpg" alt="ecran d'accueil maitresse gé">
+            <img class="card-img-top mt-2 border border-light"  src="/assets/maitressegereduit.jpg" alt="ecran d'accueil maitresse gé">
             <div class="card-header bg-primary bg-opacity-25  border border-light">Wordpress</div>
             <div class="card-body">
                 <h4 class="card-title">Le blog de Maitresse Gé</h4>
@@ -132,7 +132,7 @@
         </section>
 
         <section class="card bg-primary bg-opacity-10 border-primary col-12 col-sm-6 col-md-4">
-          <img class="card-img-top mt-2 border border-light"  src="/assets/portfolio.png" alt="ecran d'accueil portfolio">
+          <img class="card-img-top mt-2 border border-light"  src="/assets/portfolioreduit.jpg" alt="ecran CV portfolio">
           <div class="card-header bg-primary bg-opacity-25 border border-light">Portfolio</div>
           <div class="card-body">
               <h4 class="card-title">Portfolio de Pierre-Loup Perez</h4>
@@ -143,7 +143,7 @@
           </div>
           <div class="card-footer border border-light rounded bg-primary bg-opacity-25">
             <a href="/index.html" class="btn btn-info">Visitez le site</a>
-            <a href="/projets.html#" class="btn btn-light">Descriptif</a>
+            <a href="/projets.html#portfolio" class="btn btn-light">Descriptif</a>
           </div>
         </section>
       </article>
@@ -170,7 +170,7 @@
 
       <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Projets à voir</h4>
-        <a href="/pilou_art/index.html">Gallerie de Pilou_art</a>
+        <a href="/pilou_art/index.html">Galerie de Pilou_art</a>
         <a href="https://maitressege.fr">Blog deMaitresse Gé</a>
       </section>
 
