add complete project page

--- a/contact.html
+++ b/contact.html
@@ -68,17 +68,17 @@
      
      <!-- Main -->
      <main class="container">
-       <h2>Informations</h2>
-       <article>
+       <article class="text-center alert alert-secondary">
+         <h2>Informations</h2>
          <p>Vous venez de découvrir mon portfolio, et vous souhaitez me contacter?</p>
          <p>N'hésitez pas à me laisser un message ici, je vous répondrai rapidement.</p>
-         <p>Si vous le préférez vous pouvez me contacter sur <a href="https://www.linkedin.com/in/pierre-loup-perez">LinkedIn</a> ou via mon profil <a href="https://github.com/devipilou/devipilou">Github</a>.</p>
+         <p>Si vous le préférez, vous pouvez me contacter sur <a href="https://www.linkedin.com/in/pierre-loup-perez">LinkedIn</a> ou via mon profil <a href="https://github.com/devipilou/devipilou">Github</a>.</p>
         </article>
 
         <hr class="mx-5 bg-primary my-5">
       
         <!-- Alert -->
-        <div class="alert alert-dismissible alert-warning text-center ">
+        <div class="alert alert-dismissible alert-warning text-center">
          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
          <span class="badge rounded-pill bg-warning me-2">Important</span>
          Aucune informations que vous me transmettrez ci-dessous ne sera transmise à un tiers
