--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
             <div class="card-footer border border-light rounded bg-primary bg-opacity-25 ">
               <a href="/pilou_art" class="btn btn-info">Visitez le site</a>
-              <a href="/projets.html#" class="btn btn-light">Descriptif</a>
+              <a href="/projets.html#pilouart" class="btn btn-light">Descriptif</a>
             </div>
         </section>
 
@@ -127,7 +127,7 @@
             </div>
             <div class="card-footer border border-light rounded bg-primary bg-opacity-25 ">
               <a href="https://maitressege.fr" class="btn btn-info">Visitez le site</a>
-              <a href="/projets.html#" class="btn btn-light">Descriptif</a>
+              <a href="/projets.html#maitressege" class="btn btn-light">Descriptif</a>
             </div>
         </section>
 
