add backToTop button

--- a/cv.html
+++ b/cv.html
@@ -196,14 +196,18 @@
 
       <!-- CTA -->
       <article class="text-center alert alert-info">
-        <p>Mon CV vous parait interrressant? Vous souhaitez en savoir plus?</p>
+        <p>Mon CV vous parait intéressant? Vous souhaitez en savoir plus?</p>
         <p>N'hésitez plus</p>
         <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
       </article>
 
     </main>
 
-    <footer class="container-fluid row text-center justify-content-center mt-5 pt-3">
+    <div class="my-5 d-flex justify-content-end">
+      <a href="#top" class="btn btn-secondary me-5">Remonter</a>
+    </div>
+
+    <footer class="container-fluid row text-center justify-content-center pt-3">
       <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Où me trouver?</h4>
         <a href="https://github.com/devipilou/devipilou">Github</a>
