--- a/index.html
+++ b/index.html
@@ -157,10 +157,12 @@
         <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
       </article>
 
-
     </main>
+    <div class="my-5 d-flex justify-content-end">
+      <a href="#top" class="btn btn-secondary me-5">Remonter</a>
+    </div>
     
-    <footer class="container-fluid row text-center justify-content-center mt-5 pt-3">
+    <footer class="container-fluid row text-center justify-content-center pt-3">
       <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Où me trouver?</h4>
         <a href="https://github.com/devipilou/devipilou">Github</a>
