--- a/presentation.html
+++ b/presentation.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.36.0/tsparticles.min.js"></script>
     <script src="/js/app.js" defer></script>
   </head>
-  <body>
+  <body id="top">
     
     <!-- fond particules -->
     <div id="tsparticles"></div>
@@ -163,7 +163,11 @@
 
     </main>
 
-    <footer class="container-fluid row text-center justify-content-center mt-5 pt-3">
+    <div class="my-5 d-flex justify-content-end">
+      <a href="#top" class="btn btn-secondary me-5">Remonter</a>
+    </div>
+
+    <footer class="container-fluid row text-center justify-content-center pt-3">
       <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Où me trouver?</h4>
         <a href="https://github.com/devipilou/devipilou">Github</a>
