minor corrections and style

--- a/mentions.html
+++ b/mentions.html
@@ -252,9 +252,7 @@
         site perezpl.fr et de ses droits autorise Pierre-Loup Perez à
         transmettre les dites informations à l'éventuel acquéreur qui serait à
         son tour tenu à la même obligation de conservation et de modification
-        des données vis à vis de l'utilisateur du site perezpl.fr.<br>
-        Le site perezpl.fr est en conformité avec le RGPD voir notre politique
-        RGPD  https://perezpl.fr/rgpd.html.
+        des données vis à vis de l'utilisateur du site perezpl.fr.
       </p>
 
       <p>
@@ -268,27 +266,29 @@
       <a href="#top" class="btn btn-secondary me-5">Remonter</a>
     </div>
 
-    <footer class="container-fluid row text-center justify-content-center pt-3">
-      <section class="col-12 col-sm-6 col-md-4 row">
-        <h4>Où me trouver?</h4>
-        <a href="https://github.com/devipilou/devipilou">Github</a>
-        <a href="https://www.linkedin.com/in/pierre-loup-perez">LinkedIn</a>
-        <a href="https://scratch.mit.edu/users/AnnaEtPapa/">Scratch</a>
-      </section>
+   <!-- Footer -->
+   <footer class="container-fluid row text-center justify-content-center pt-3">
+    <section class="col-12 col-sm-6 col-md-4 row">
+      <h4>Où me trouver?</h4>
+      <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
+      <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
+    </section>
 
-      <section class="col-12 col-sm-6 col-md-4 row">
-        <h4>Projets à voir</h4>
-        <a href="/pilou_art/index.html">Galerie de Pilou_art</a>
-        <a href="https://maitressege.fr">Blog deMaitresse Gé</a>
-      </section>
+    <section class="col-12 col-sm-6 col-md-4 row">
+      <h4>Projets à voir</h4>
+      <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
+      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+    </section>
 
-      <section class="col-12 col-sm-6 col-md-4 row">
-        <h4>Liens internes</h4>
-        <a href="contact.html">Contactez-moi</a>
-        <a href="mentions.html">Mentions Légales</a>
-      </section>
-      <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
-    </footer>
+    <section class="col-12 col-sm-6 col-md-4 row">
+      <h4>Liens internes</h4>
+      <a href="contact.html">Contactez-moi</a>
+      <a href="mentions.html">Mentions Légales</a>
+    </section>
+    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+  </footer>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
@@ -300,6 +300,5 @@
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
-    <p class="col-12">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
   </body>
 </html>
