--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     <main class="container text-center">
 
       <article class="my-3 row align-items-center">
-        <h2 class="col-12 col-md-4">Qui suis-je?</h2>
-        <section class="col-12 col-md-8 justify-content-center">
+        <h2 class="col-12 col-md-6 order-md-2">Qui suis-je?</h2>
+        <section class="col-12 col-md-6 order-md-1 justify-content-center">
           <p>Développeur Web Fullstack Junior</p>
           <p>Ancien Musicien-militaire reconverti</p>
           <p>Créatif/Constructif/Curieux</p>
@@ -86,8 +86,8 @@
       <hr class="mx-5 bg-primary">
 
       <article class="my-3 row align-items-center">
-        <h2 class="col-12 col-md-4">Curriculum Vitae</h2>
-        <section class="col-12 col-md-8 justify-content-center">
+        <h2 class="col-12 col-md-6">Curriculum Vitae</h2>
+        <section class="col-12 col-md-6 justify-content-center">
           <p>Front: Html/Css Scss/Sass Javascript Wordpress</p>
           <p>Back: Php/mySql Laravel</p>
           <p>Softskills: Initiatives Organisation Adaptation Autonomie</p>
@@ -158,22 +158,24 @@
       </article>
 
     </main>
+
     <div class="my-5 d-flex justify-content-end">
       <a href="#top" class="btn btn-secondary me-5">Remonter</a>
     </div>
-    
+
+   <!-- Footer -->
     <footer class="container-fluid row text-center justify-content-center pt-3">
       <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Où me trouver?</h4>
-        <a href="https://github.com/devipilou/devipilou">Github</a>
-        <a href="https://www.linkedin.com/in/pierre-loup-perez">LinkedIn</a>
-        <a href="https://scratch.mit.edu/users/AnnaEtPapa/">Scratch</a>
+        <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
+        <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+        <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
       </section>
 
       <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Projets à voir</h4>
-        <a href="/pilou_art/index.html">Galerie de Pilou_art</a>
-        <a href="https://maitressege.fr">Blog deMaitresse Gé</a>
+        <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
+        <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
       </section>
 
       <section class="col-12 col-sm-6 col-md-4 row">
