--- a/projets.html
+++ b/projets.html
@@ -170,27 +170,29 @@
       <a href="#top" class="btn btn-secondary me-5">Remonter</a>
     </div>
 
-    <footer class="container-fluid row text-center justify-content-center pt-3">
-      <section class="col-12 col-sm-6 col-md-4 row">
-        <h4>Où me trouver?</h4>
-        <a href="https://github.com/devipilou/devipilou">Github</a>
-        <a href="https://www.linkedin.com/in/pierre-loup-perez">LinkedIn</a>
-        <a href="https://scratch.mit.edu/users/AnnaEtPapa/">Scratch</a>
-      </section>
+   <!-- Footer -->
+   <footer class="container-fluid row text-center justify-content-center pt-3">
+    <section class="col-12 col-sm-6 col-md-4 row">
+      <h4>Où me trouver?</h4>
+      <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
+      <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
+      <a href="https://scratch.mit.edu/users/AnnaEtPapa/" target="_blank">Scratch</a>
+    </section>
 
-      <section class="col-12 col-sm-6 col-md-4 row">
-        <h4>Projets à voir</h4>
-        <a href="/pilou_art/index.html">Galerie de Pilou_art</a>
-        <a href="https://maitressege.fr">Blog deMaitresse Gé</a>
-      </section>
+    <section class="col-12 col-sm-6 col-md-4 row">
+      <h4>Projets à voir</h4>
+      <a href="/pilou_art/index.html" target="_blank">Galerie de Pilou_art</a>
+      <a href="https://maitressege.fr" target="_blank">Blog deMaitresse Gé</a>
+    </section>
 
-      <section class="col-12 col-sm-6 col-md-4 row">
-        <h4>Liens internes</h4>
-        <a href="contact.html">Contactez-moi</a>
-        <a href="mentions.html">Mentions Légales</a>
-      </section>
-      <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
-    </footer>
+    <section class="col-12 col-sm-6 col-md-4 row">
+      <h4>Liens internes</h4>
+      <a href="contact.html">Contactez-moi</a>
+      <a href="mentions.html">Mentions Légales</a>
+    </section>
+    <p class="col-12 mt-2">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
+  </footer>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
