--- a/presentation.html
+++ b/presentation.html
@@ -127,7 +127,7 @@
           <h4 class="ms-3">Savoir être</h4>
           <p>Vous trouverez en moi quelqu'un d'à la fois <strong>autonome</strong> et appréciant le <strong>travail en équipe</strong></p>
           <p>Je n'ai aucun problème pour trouver ma place dans une ambiance de travail, dans une équipe, et j'ai une facilité à apporter de la cohésion dans une équipe, car c'est un élément très fort de ma personalité</p>
-          <p>Le respect est profondément ancré en moi, envers tout un chacun, quelque soit son rang social ou sa position dans l'entreprise</p>
+          <p>Le respect est profondément ancré en moi, envers tout un chacun, quel que soit son rang social ou sa position dans l'entreprise</p>
         </section>
         <p>N'hésitez pas à <a href="/contact.html">me demander</a> plus d'information à ce sujet</p>
       </article>
@@ -138,12 +138,12 @@
         <h3>Les "3C": Créatif/Constructif/Curieux</h3>
         <section>
           <h4 class="ms-3">Créatif</h4>
-          <p>La <strong>Créativité</strong> est, et à toujours été, un élément central de mon caractère. Au point d'en être quelques fois un besoin presque pathologique.</p>
+          <p>La <strong>Créativité</strong> est, et à toujours été, un élément central de mon caractère. Au point d'en être quelquefois un besoin presque pathologique.</p>
           <p>Pour en savoir plus, visitez <a href="/pilou_art/">ma galerie d'image</a> par exemple, ou demandez-moi en suivant le lien ci-dessous.</p>
         </section>
         <section>
           <h4 class="ms-3">Constructif</h4>
-          <p>J'ai pour habitude, presque même pour leitmotif, de toujours être <strong>constructif</strong>. Je peux être quelque fois direct, bien que toujours poli. Mais même quand ce que je dis n'est pas facile à entendre, c'est toujours <strong>bienveillant</strong> et surtout <strong>positif</strong></p>
+          <p>J'ai pour habitude, presque même pour leitmotiv, de toujours être <strong>constructif</strong>. Je peux être quelque fois direct, bien que toujours poli. Mais même quand ce que je dis n'est pas facile à entendre, c'est toujours <strong>bienveillant</strong> et surtout <strong>positif</strong></p>
         </section>
         <section>
           <h4 class="ms-3">Curieux</h4>
