--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
           <span class="message-alerte text-info">Veuillez remplir ce champ s'il-vous-plait</span>
         </div>
 
-        <button type="submit" class="btn btn-success disabled">Envoyez</button>
+        <button type="submit" class="btn btn-primary disabled">Envoyez</button>
       </form>
     </main>
 
