--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="card-footer border border-light rounded bg-primary bg-opacity-25 ">
-              <a href="/pilou_art" class="btn btn-info">Visitez le site</a>
+              <a href="/pilou_art" class="btn btn-secondary">Visitez le site</a>
               <a href="/projets.html#pilouart" class="btn btn-light">Descriptif</a>
             </div>
         </section>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="card-footer border border-light rounded bg-primary bg-opacity-25 ">
-              <a href="https://maitressege.fr" class="btn btn-info">Visitez le site</a>
+              <a href="https://maitressege.fr" class="btn btn-secondary">Visitez le site</a>
               <a href="/projets.html#maitressege" class="btn btn-light">Descriptif</a>
             </div>
         </section>
@@ -142,7 +142,7 @@
               </div>
           </div>
           <div class="card-footer border border-light rounded bg-primary bg-opacity-25">
-            <a href="/index.html" class="btn btn-info">Visitez le site</a>
+            <a href="/index.html" class="btn btn-secondary">Visitez le site</a>
             <a href="/projets.html#portfolio" class="btn btn-light">Descriptif</a>
           </div>
         </section>
@@ -154,7 +154,7 @@
       <article class="text-center alert alert-info">
         <p>Mes projets vous plaisent? Mon profil vous intéresse?</p>
         <p>N'hésitez plus</p>
-        <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
+        <a class="btn btn-primary btn-lg" href="contact.html">Contactez-moi</a>
       </article>
 
     </main>
