--- a/presentation.html
+++ b/presentation.html
@@ -157,7 +157,7 @@
       <article class="text-center alert alert-info">
         <p>Mon profil pourrait convenir à votre entreprise? Mon expérience vous intéresse?</p>
         <p>N'hésitez plus</p>
-        <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
+        <a class="btn btn-primary btn-lg" href="contact.html">Contactez-moi</a>
       </article>
       
 
