--- a/projets.html
+++ b/projets.html
@@ -117,7 +117,9 @@
           <p>Il est construit à l'aide de bootstrap5 et du thème <a href="https://bootswatch.com/spacelab/">Spacelab</a> de Bootswatch et un peu de custon Css.</p>
           <p>Le fond de page est une animation Js a l'aide de la librtairie <a href="https://particles.js.org/">tsParticles</a>.</p>
           <p>C'est le site sur lequel vous naviguez actuellement.</p>
-          <a href="https://perezpl.fr" class="btn btn-info">Revenir à l'accueil</a>
+          <p><span class="badge rounded-pill bg-primary">Dernier ajout</span> Validation coté client du formulaire de contact</p>
+
+          <a href="https://perezpl.fr" class="btn btn-secondary">Revenir à l'accueil</a>
         </section>
       </article>
 
@@ -131,7 +133,9 @@
           <p>Ce projet est pour moi presque un prétexte pour découvrir <a href="https://wordpress.com/fr/" target="_blank">Wordpress</a>. Qu'on apprécie ou non ce CMS, il n'en est pas moins un incontournable outil web et il est essentiel d'en connaitre l'utilisation.</p>
           <p>Ce site est construit sur le thème <a href="https://oceanwp.org/" target="_blank">OceanWP</a>, et à l'aide d'extensions comme Elementor, Wordfence, ou ContactForm7. Il fait également appel à une api smtp gmail pour gérer les envois de mail depuis le formulaire.</p>
           <p>C'est le blog dans lequel l'instagrameuse <a href="https://www.instagram.com/maitresse.ge/" target="_blank">@maitresse.ge</a> partage ses ateliers avec d'autres enseignants de cycle 2.</p>
-          <a href="https://maitressege.fr" target="_blank" class="btn btn-info">Visitez le site</a>
+          <p><span class="badge rounded-pill bg-primary">Dernier ajout</span> Remplissage en cours des avec les anciens articles</p>
+
+          <a href="https://maitressege.fr" target="_blank" class="btn btn-secondary">Visitez le site</a>
         </section>
         <section class="imgProj col-12 col-md-6">
           <img class="img-fluid border border-primary rounded" src="/assets/maitressege.jpg" alt="ecran accueil maitressege">
@@ -148,10 +152,12 @@
         </section>
         <section class="txtProj col-12 col-md-6 row">
           <h3>Projet "from scratch" avec Scss et Js</h3>
-          <p>Ce site est une galerie des dessins que je fais à mes heures perdues et que je partage habituellement sur <a href="https://www.instagram.com/pilou_art/" target="_blank">instagram</a></p>
+          <p>Ce site est une galerie des dessins que je fais à mes heures perdues et que je partage habituellement sur <a href="https://www.instagram.com/pilou_art/" target="_blank">Instagram</a></p>
           <p>Je l'ai concu comme un exercice de construction de site en partant de rien, et en gérant le style en Sass/scss. Les animations du menu sont en Javascript.</p>
           <p>Il est installé en tant que sous-domaine du site actuel, et est géré comme sous-module de ce dernier avec Git</p>
-          <a href="https://perezpl.fr/pilou_art/" target="_blank" class="btn btn-info">Visitez le site</a>
+          <p><span class="badge rounded-pill bg-primary">Dernier ajout</span> Correction de l'erreur d'animation des lettres du menu</p>
+
+          <a href="https://perezpl.fr/pilou_art/" target="_blank" class="btn btn-secondary">Visitez le site</a>
         </section>
       </article>
 
@@ -159,7 +165,7 @@
       <article class="text-center alert alert-info">
         <p>Ces projets vous plaisent? Vous êtes interressés par mon travail?</p>
         <p>N'hésitez plus</p>
-        <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
+        <a class="btn btn-primary btn-lg" href="contact.html">Contactez-moi</a>
       </article>
 
       
