--- a/cv.html
+++ b/cv.html
@@ -74,7 +74,7 @@
         <h2 class="col-12 col-sm-6 col-md-8 text-primary">Développeur Web Junior</h2>
         <img class="photoProfil col-12 col-sm-6 col-md-4" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup">
       </div>
-      <p><span id="age"></span> ans, permisB, véhiculé</p>
+      <p class="mt-3"><span id="age"></span> ans, permisB, véhiculé</p>
 
       <hr class="bg-primary">
 
@@ -198,7 +198,7 @@
       <article class="text-center alert alert-info">
         <p>Mon CV vous parait intéressant? Vous souhaitez en savoir plus?</p>
         <p>N'hésitez plus</p>
-        <a class="btn btn-success btn-lg" href="contact.html">Contactez-moi</a>
+        <a class="btn btn-primary btn-lg" href="contact.html">Contactez-moi</a>
       </article>
 
     </main>
