add small design improvement

--- a/contact.html
+++ b/contact.html
@@ -93,33 +93,34 @@
 
         <div class="mb-3 form-group">
           <label for="name" class="form-label">Comment dois-je vous appeler?</label>
+          <span class="message-alerte text-info">Choisissez un nom ne comprenant que des lettres et des chiffres s'il-vous-plait</span>
           <div class="input-group">
             <input type="text" name="name" id="name" placeholder="Votre nom" class="form-control" required>
             <img src="" alt="icone de validation" class="icone-verif ms-2">
           </div>
-          <span class="message-alerte text-info">Choisissez un nom ne comprenant que des lettres et des chiffres s'il-vous-plait</span>
 
         </div>
 
         <div class="mb-3 form-group">
           <label for="email" class="form-label">A quelle adresse puis-je vous répondre?</label>
+          <span class="message-alerte text-info">Veuillez entrer un mail valide s'il-vous-plait</span>
           <div class="input-group">
             <input type="email" name="email" id="email" placeholder="exemple@mail.fr" class="form-control" required>
             <img src="" alt="icone de validation" class="icone-verif ms-2">
           </div>
-          <span class="message-alerte text-info">Veuillez entrer un mail valide s'il-vous-plait</span>
         </div>
 
         <div class="mb-3 form-group">
           <label for="message" class="form-label">Votre Message:</label>
+          <span class="message-alerte text-info">Veuillez remplir ce champ s'il-vous-plait</span>
           <div class="input-group">
             <textarea name="message" id="message" rows="10" class="form-control" placeholder="Corps de votre message" required></textarea>
             <img src="" alt="icone de validation" class="icone-verif ms-2">
           </div>
-          <span class="message-alerte text-info">Veuillez remplir ce champ s'il-vous-plait</span>
         </div>
 
         <button type="submit" class="btn btn-primary disabled">Envoyez</button>
+        <span id="submit-message">Merci de remplir tous les champs</span>
       </form>
     </main>
 
