--- a/cv.html
+++ b/cv.html
@@ -70,13 +70,13 @@
 
     <main class="container text-center ">
       <!-- titre du CV -->
-      <div class="row align-items-center justify-content-center titreCv py-5 py-md-4">
+      <div class="row align-items-center justify-content-center alert alert-secondary py-5 py-md-4">
         <h2 class="col-12 col-sm-6 col-md-8 text-primary">Développeur Web Junior</h2>
         <img class="photoProfil col-12 col-sm-6 col-md-4" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup">
       </div>
       <p class="mt-3"><span id="age"></span> ans, permisB, véhiculé</p>
 
-      <hr class="bg-primary">
+      <hr>
 
       <!-- Corps du CV -->
       <div class="row">
@@ -86,7 +86,7 @@
 
           <!-- Competences -->
           <article>
-            <h3 class="mb-3 titreCv">Competences</h3>
+            <h3 class="mb-3 alert alert-secondary">Competences</h3>
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-2">WebDev</h4>
               <p class="col-12 col-lg-3">
@@ -99,6 +99,7 @@
                 <img src="/assets/java.png" alt="java" class="icone">
               </p>
             </section>
+            <hr class="mx-5">
             <section class="row">
               <h4 class="col-12 col-lg-2">Divers</h4>
               <p class="col-12 col-lg-3">
@@ -112,6 +113,7 @@
                 <img src="/assets/samplitude.png" alt="samplitude" class="icone">
               </p>
             </section>
+            <hr class="mx-5">
             <section class="row">
               <h4 class="col-12">Mes Atouts</h4>
               <ul class="col-12 text-start ms-2">
@@ -123,10 +125,10 @@
             </section>
           </article>
   
-          <hr>
+          <hr class="mx-5">
           <!-- Expériences -->
           <article>
-            <h3 class="titreCv">Experiences</h3>
+            <h3 class="alert alert-secondary ">Experiences</h3>
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-3">2011-2021</h4>
               <div class="col-12 col-lg-9">
@@ -140,11 +142,13 @@
                 </ul>
               </div>
             </section>
+            <hr class="mx-5">
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-3">2011-2014</h4>
               <p class="col-12 col-lg-9"><span class="text-primary">Professeur de cor</span> - Conservatoire d’Heyrieux (38)<br>
               Encadrement d'ensembles d'élèves</p>
             </section>
+            <hr class="mx-5">
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-3">2010-2011</h4>
               <p class="col-12 col-lg-9"><span class="text-primary">Vendeur</span> à la Brioche Dorée</p>
@@ -154,8 +158,8 @@
         </div>
 
         <!-- Colonne de droite -->
-        <aside class="col-12 col-md-4">
-          <h3 class="titreCv">Formations</h3>
+        <aside class="col-12 col-md-4 border-start">
+          <h3 class="alert alert-secondary ">Formations</h3>
           <section>
             <h4>2021-2022</h4>
             <p>Développeur Web et Web Mobile au GRETA Lyon-Métropole</p>
@@ -185,7 +189,7 @@
 
       <!-- Pied du CV - Intérets -->
       <article class="col-12 row align-items-center justify-content-evenly">
-        <h3 class="col-12 col-md-3 titreCv">Interets</h3>
+        <h3 class="col-12 col-md-3 alert alert-secondary ">Interets</h3>
         <ul class="col-12 col-md-8 text-start">
           <li>Informatique : intérêt personnel pour la Cybersécurité</li>
           <li>Sport : golf, football, running</li>
