--- a/projets.html
+++ b/projets.html
@@ -114,17 +114,17 @@
         <section class="txtProj col-12 col-md-6 row">
           <h3>Projet Bootstrap et Js</h3>
           <p>Mon portfolio est l'occasion pour moi de mettre en pratique mes cours sur bootstrap et de réaliser une animation en Javascript.</p>
-          <p>Il est construit à l'aide de bootstrap5 et du thème <a href="https://bootswatch.com/spacelab/">Spacelab</a> de Bootswatch et un peu de custon Css.</p>
+          <p>Il est construit à l'aide de bootstrap5 et du thème <a href="https://bootswatch.com/spacelab/">Spacelab</a> de Bootswatch et un peu de custom Css.</p>
           <p>Le fond de page est une animation Js a l'aide de la librtairie <a href="https://particles.js.org/">tsParticles</a>.</p>
           <p>C'est le site sur lequel vous naviguez actuellement.</p>
-          <p><span class="badge rounded-pill bg-primary">Dernier ajout</span> Validation coté client du formulaire de contact</p>
+          <p><span class="badge rounded-pill bg-secondary">Dernier ajout</span> Validation coté client du formulaire de contact</p>
 
           <a href="https://perezpl.fr" class="btn btn-secondary">Revenir à l'accueil</a>
         </section>
       </article>
 
       <!-- Maitresse Gé -->
-      <article class="row border border-2 border-primary rounded p-3" id="maitressege">
+      <article class="row border border-2 border-primary rounded p-3 mt-lg-5" id="maitressege">
         <section class="titreProj col-12 text-center">
           <h2>Blog de MaitresseGe</h2>
         </section>
@@ -133,7 +133,7 @@
           <p>Ce projet est pour moi presque un prétexte pour découvrir <a href="https://wordpress.com/fr/" target="_blank">Wordpress</a>. Qu'on apprécie ou non ce CMS, il n'en est pas moins un incontournable outil web et il est essentiel d'en connaitre l'utilisation.</p>
           <p>Ce site est construit sur le thème <a href="https://oceanwp.org/" target="_blank">OceanWP</a>, et à l'aide d'extensions comme Elementor, Wordfence, ou ContactForm7. Il fait également appel à une api smtp gmail pour gérer les envois de mail depuis le formulaire.</p>
           <p>C'est le blog dans lequel l'instagrameuse <a href="https://www.instagram.com/maitresse.ge/" target="_blank">@maitresse.ge</a> partage ses ateliers avec d'autres enseignants de cycle 2.</p>
-          <p><span class="badge rounded-pill bg-primary">Dernier ajout</span> Remplissage en cours des avec les anciens articles</p>
+          <p><span class="badge rounded-pill bg-secondary">Dernier ajout</span> Remplissage en cours avec les articles de l'ancien blog</p>
 
           <a href="https://maitressege.fr" target="_blank" class="btn btn-secondary">Visitez le site</a>
         </section>
@@ -143,7 +143,7 @@
       </article>
       
       <!-- Pilou art -->
-      <article class="row border border-2 border-primary rounded p-3" id="pilouart">
+      <article class="row border border-2 border-primary rounded p-3 mt-lg-5" id="pilouart">
         <section class="titreProj col-12 text-center">
           <h2>Galerie de Pilou_art</h2>
         </section>
@@ -155,14 +155,14 @@
           <p>Ce site est une galerie des dessins que je fais à mes heures perdues et que je partage habituellement sur <a href="https://www.instagram.com/pilou_art/" target="_blank">Instagram</a></p>
           <p>Je l'ai concu comme un exercice de construction de site en partant de rien, et en gérant le style en Sass/scss. Les animations du menu sont en Javascript.</p>
           <p>Il est installé en tant que sous-domaine du site actuel, et est géré comme sous-module de ce dernier avec Git</p>
-          <p><span class="badge rounded-pill bg-primary">Dernier ajout</span> Correction de l'erreur d'animation des lettres du menu</p>
+          <p><span class="badge rounded-pill bg-secondary">Dernier ajout</span> Correction de l'erreur d'animation des lettres du menu</p>
 
           <a href="https://perezpl.fr/pilou_art/" target="_blank" class="btn btn-secondary">Visitez le site</a>
         </section>
       </article>
 
       <!-- CTA -->
-      <article class="text-center alert alert-info">
+      <article class="text-center alert alert-info mt-lg-5">
         <p>Ces projets vous plaisent? Vous êtes interressés par mon travail?</p>
         <p>N'hésitez plus</p>
         <a class="btn btn-primary btn-lg" href="contact.html">Contactez-moi</a>
