add bonus page and snake game

--- a/cv.html
+++ b/cv.html
@@ -51,6 +51,9 @@
                 <span class="visually-hidden">(current)</span>
               </a>
             </li>
+            <li class="nav-item">
+              <a href="bonus.html" class="nav-link">Bonus</a>
+            </li>
           </ul>
         </div>
       </div>
