--- a/mentions.html
+++ b/mentions.html
@@ -49,6 +49,9 @@
             <li class="nav-item">
               <a class="nav-link" href="cv.html">Curriculum Vitae</a>
             </li>
+            <li class="nav-item">
+              <a href="bonus.html" class="nav-link">Bonus</a>
+            </li>
           </ul>
         </div>
       </div>
