add a little bit forgotten in previous

--- a/bonus.html
+++ b/bonus.html
@@ -76,9 +76,8 @@
          <h2>Bravo</h2>
          <p>Vous etes arrivés sur la page la plus intéressante du site.</p>
          <p>Vous pourrez trouver ici, un jeu pour l'instant, mais j'espère assez vite pouvoir vous en proposer plus</p>
-         <strong>Amusez-vous bien!!</strong>
-         <br>
-         <small class="text-secondary">ps: mon record au "snake" est 500</small>
+         <p><strong>Amusez-vous bien!!</strong></p>
+         <p><small class="text-secondary">ps: mon record au "snake" est <span id="record"></span></small></p>
         </article>
 
         <hr class="mx-5 bg-primary my-5">
