add acceleration of snake

--- a/bonus.html
+++ b/bonus.html
@@ -83,6 +83,7 @@
 
         <article id="snake" class="text-center">
             <h3>Le Mythique "SNAKE"</h3>
+            <img src="/assets/snake.jpg" alt="jeu snake"class="img-fluid mb-3">
             <p>Un gameplay inventé en 1976 avec le jeu Blockade, que l'on retrouve dans des jeux comme Worm en 1978, Tron et Nibbler en 1982.</p>
             <p>Il est également connu pour les différentes version de Snake parues à partir de 1997 sur Nokia 6610</p>
             <a class="btn btn-secondary" href="snake.html">Essayer le jeu</a>
