add minor texts around snake

--- a/snake.html
+++ b/snake.html
@@ -85,6 +85,7 @@
 
       <article class="text-center">
         <p>Un grand merci à Enzo Ustariz de <a href="https://www.ecole-du-web.net/">l'école du Web</a> pour son tuto qui explique comment coder ce jeu ce jeu.</p>
+        <p>Pour les amateurs de record, le jeu ne comprend pas deux mouvements plus rapprochés que sa fréquence de rafraichissement d'image (5fps au début du jeu) et si vous battez mon record, ouvrez votre console et faites un screenshot pour me l'envoyer.</p>
       </article>
 
     </main>
